--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,12 +1,19 @@
-// @import "base";
+@import "base";
 // You need the base only when you are not using bootstrap. In that case, go to _base.scss
 // to customize it as you may want.
 
 @import "variables";
-@import "../../node_modules/bootstrap/scss/bootstrap";
+// @import "../../node_modules/bootstrap/scss/bootstrap";
 
 // Write your sass code here or import partials
 
-h1 {
-  color: tomato;
+.container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  h1 {
+    color: tomato;
+    font-size: 9vh;
+  }
 }
